--- a/nlp_hw2.ipynb
+++ b/nlp_hw2.ipynb
@@ -2,12 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "infos = []\n",
+    "\n",
+    "for i in range(1,10): #11467\n",
+    "    url = \"https://movies.yahoo.com.tw/movieinfo_main/\" + str(i)\n",
+    "    r = requests.get(url)\n",
+    "    soup = BeautifulSoup(r.text)"
    ]
   }
  ],
