--- a/nlp_hw2.ipynb
+++ b/nlp_hw2.ipynb
@@ -21,7 +21,16 @@
     "for i in range(1,10): #11467\n",
     "    url = \"https://movies.yahoo.com.tw/movieinfo_main/\" + str(i)\n",
     "    r = requests.get(url)\n",
-    "    soup = BeautifulSoup(r.text)"
+    "    soup = BeautifulSoup(r.text)\n",
+    "    \n",
+    "    info = {}\n",
+    "    \n",
+    "    if soup.find('div', class_='movie_intro_info_r'):\n",
+    "        for d in soup.find_all('div', id=\"content_l\"):\n",
+    "            info['名稱'] = d.find('div', class_='movie_intro_info_r').find('h1').text.strip()\n",
+    "            \n",
+    "            info['劇情介紹'] = d.find('span', id ='story').text.strip()\n",
+    "            info['上映日期'] = d.find('span').text.strip()[5:]"
    ]
   }
  ],
