--- a/nlp_hw2.ipynb
+++ b/nlp_hw2.ipynb
@@ -12,13 +12,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "infos = []\n",
     "\n",
-    "for i in range(1,10): #11467\n",
+    "for i in range(1,11): #11467\n",
     "    url = \"https://movies.yahoo.com.tw/movieinfo_main/\" + str(i)\n",
     "    r = requests.get(url)\n",
     "    soup = BeautifulSoup(r.text)\n",
@@ -29,9 +45,20 @@
     "        for d in soup.find_all('div', id=\"content_l\"):\n",
     "            info['名稱'] = d.find('div', class_='movie_intro_info_r').find('h1').text.strip()\n",
     "            \n",
+    "            \n",
     "            info['劇情介紹'] = d.find('span', id ='story').text.strip()\n",
-    "            info['上映日期'] = d.find('span').text.strip()[5:]"
+    "            info['上映日期'] = d.find('span').text.strip()[5:]\n",
+    "            \n",
+    "            infos.append(info)\n",
+    "            print(i)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
